# sagittarius_ws

./: README.md
grasp_utils/: README.md
grasp_utils/grasp_utils/: CMakeLists.txt  package.xml
grasp_utils/grasp_utils/include/grasp_utils/: GraspDetector.hpp  GraspExecutor.hpp
grasp_utils/grasp_utils/launch/: grasping_pipeline.launch
grasp_utils/grasp_utils/msg/: GraspArray.msg
grasp_utils/grasp_utils/src/: grasp_det_node.cpp  grasp_exec.cpp  grasp_exec_node.cpp
